import org.w3c.dom.Text;

import java.util.ArrayList;
import java.util.HashMap;

public class Setup {
    public static void signUp() {
        String input = "temp";
        String username;
        String password;
        ArrayList<String> showsSeen = new ArrayList<>();
        ArrayList<String> favouriteShows = new ArrayList<>();
        TextUI.signUp();
        TextUI.newUsername();
        FileIO.readUserData();
        username = input;
        TextUI.newPassword();
        FileIO.readUserData;
        password = input;
        User newUser = new User(username, password, showsSeen, favouriteShows);
        TextUI.finishSignUp(newUser);
        FileIO.pressAnything;

        IDandPassword.addUser(newUser);
    }
}