public class Streaming
{
}
