@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Main
class MainMenu
class Startmenu
class TextUI
class User
class FileIO
class ExceptionHandler
abstract class Media implements IMedia
class Movie extends Media
class Series extends Media
class SearchFunction
class MainMenu
class Streaming
class Setup

Main *--- Streaming
Startmenu *--- Setup
Streaming *--- MainMenu
MainMenu *--- Startmenu
MainMenu *---TextUI
MainMenu *--- ExceptionHandler
MainMenu *--- FileIO
MainMenu *--- User
MainMenu *--- IMedia
MainMenu *--- SearchFunction
User *--- FileIO
SearchFunction *--- TextUI
Startmenu *--- TextUI
ExceptionHandler *--- TextUI
Setup *--- FileIO

Main : +psvm()
Main : +Streaming streaming

MainMenu : + User currentUser
MainMenu : + setup()
MainMenu : + selection()
Streaming : + void runStreaming()

Setup : + //generate user
Setup : + //run login screen

SearchFunction : +//search()

Startmenu : + User currentUser
Startmenu : + boolean welcome()
Startmenu : + User login()
Startmenu : + User signUp()
Startmenu : + void getRegisteredUsers()

FileIO : + Scanner scanner
FileIO : + ArrayList<String> readData()
FileIO : + ArrayList<String> writeData()


User : + Arraylist<String> showsSeen
User : + Arraylist<String> favouriteShows
User : - String username
User : - String password
User : + HashMap putInLoginfo()


IMedia : + void play()
IMedia : + String toString()

TextUI : + Scanner scanner
TextUI : + //print

ExceptionHandler : + diverse fejl lol

Media : -String name
Media : -int year
Media : -String[] genre
Media : -float rating
Media : + void play();
Media : + String toString();
Media : + String getName();
Media : + int getYear();
Media : + String[] getGenre();
Media : + float getRating();

Movie : + String toString();

Series : - int seasons
Series : + String toString();


@enduml